<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_backgroud"
    tools:context=".about.AboutActivity">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/rounded_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:scaleType="center"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:riv_corner_radius="10dip"
        app:riv_oval="true" />
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-15dp"
        android:background="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="@id/rounded_view"
        app:layout_constraintEnd_toEndOf="@id/rounded_view"
        app:layout_constraintStart_toStartOf="@id/rounded_view" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:text="@string/online"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        
    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/tv_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_mukhlis"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rounded_view" />
    
    <TextView
        android:id="@+id/tv_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/emaik"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_view_2" />
    
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_view_3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_view_3">

            <TextView
                android:id="@+id/tv_about_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/title_about_detail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_set_detail"
                android:textColor="@color/black"
                android:text="@string/about_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>