<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_backgroud"
    android:padding="16dp"
    tools:context=".DetailHospitalActivity">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/detailviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detil_rumah_sakit"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Hospital Name -->
    <TextView
        android:id="@+id/tv_nama_rumah_sakit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/nama_rumah_sakit"
        app:layout_constraintTop_toBottomOf="@id/detailviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Hospital Details Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cd_alamat_rumah_sakit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_rumah_sakit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_alamatRumahSakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/des_rmh_sakit"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_Nomer_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_hp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Hospital Image Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cd_alamat_rumah_sakit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_hospital_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rs_kota" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
